--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -405,6 +405,7 @@
             android:background="#756F6F"
             android:paddingStart="10dp"
             android:text="Attack List"
+            android:textSize="17sp"
             app:layout_constraintEnd_toStartOf="@+id/listView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
