--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -20,7 +20,7 @@
             android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="128dp"
-            android:background="#DF8F8F"
+            android:background="#B544E6B9"
             android:divider="#2C2C2C"
             android:showDividers="middle">
 
